--- a/index.html
+++ b/index.html
@@ -23,8 +23,18 @@
     </style>
 </head>
 <body>
+
+    <!-- Banner Section -->
+    <section class="grid grid-cols-2 container mx-auto">
+        <div class="banner-left space-y-[30px]">
+            <h2 class="text-[80px] font-bold">It's good <br> tea time at The <br> Tea House</h2>
+            <p class="text-[#777777] ">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
+            <button class="py-3 px-5 rounded-md text-white font-semibold bg-linear-to-r from-[#FF8938] to-[#FF0000]">Explore More <span class="-rotate-45 inline-block"><i class="fa-solid fa-arrow-right"></i></span></button>
+        </div>
+        <div class="banner-right">
+            <img src="./images/banner.png" alt="">
+        </div>
+    </section>
     
-    <h2 class="text-red-500 bg-green-500">Tea house</h2>
-    <span><i class="fa-solid fa-user"></i></span>
 </body>
 </html>
