--- a/index.html
+++ b/index.html
@@ -25,16 +25,83 @@
 <body>
 
     <!-- Banner Section -->
-    <section class="grid grid-cols-2 container mx-auto">
-        <div class="banner-left space-y-[30px]">
+    <section class="grid grid-cols-1 md:grid-cols-2 container mx-auto">
+        <div class="banner-left space-y-[30px] ">
             <h2 class="text-[80px] font-bold">It's good <br> tea time at The <br> Tea House</h2>
             <p class="text-[#777777] ">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
             <button class="py-3 px-5 rounded-md text-white font-semibold bg-linear-to-r from-[#FF8938] to-[#FF0000]">Explore More <span class="-rotate-45 inline-block"><i class="fa-solid fa-arrow-right"></i></span></button>
         </div>
-        <div class="banner-right">
+        <div class="banner-right  flex justify-end items-end relative">
             <img src="./images/banner.png" alt="">
+
+            <!-- Rating div -->
+             <div class="bg-white rounded-xl shadow-2xl flex justify-center items-center gap-2 w-[255px] absolute bottom-[15px] left-[220px] py-[25px] px-[15px]">
+                <img src="./images/banner-rating.png" alt="">
+                <div>
+                    <h2 class="font-bold text-2xl">5.00</h2>
+                    <p>Trust Rating</p>
+                </div>
+             </div>
         </div>
     </section>
+
+    <!-- Featured section -->
+    <section class="container mx-auto my-[90px]">
+        <!-- Featured section header -->
+        <div class="text-center max-w-[65%] mx-auto mb-[50px]">
+            <h2 class="font-bold text-[45px] ">Our Featured Products</h2>
+            <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+        </div>
+
+        <div class="featured-card-pareent grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4">
+            <div class="featrued-card bg-linear-to-b from-[#f4f4f4] to-[#f4f4f400] p-7 text-center rounded-md">
+                <img src="./images/tea-1.png" alt="" class="mx-auto mb-4">
+                <h2 class="font-semibold text-xl">Milk Tea</h2>
+                <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+            </div>
+            <div class="featrued-card bg-linear-to-b from-[#f4f4f4] to-[#f4f4f400] p-7 text-center rounded-md">
+                <img src="./images/tea-2.png" alt="" class="mx-auto mb-4">
+                <h2 class="font-semibold text-xl">Black Tea</h2>
+                <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+            </div>
+            <div class="featrued-card bg-linear-to-b from-[#f4f4f4] to-[#f4f4f400] p-7 text-center rounded-md">
+                <img src="./images/tea-3.png" alt="" class="mx-auto mb-4">
+                <h2 class="font-semibold text-xl">Green Tea</h2>
+                <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+            </div>
+            <div class="featrued-card bg-linear-to-b from-[#f4f4f4] to-[#f4f4f400] p-7 text-center rounded-md">
+                <img src="./images/tea-4.png" alt="" class="mx-auto mb-4">
+                <h2 class="font-semibold text-xl">Lemon Tea</h2>
+                <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- great tea section -->
+     <section class="container mx-auto  grid grid-cols-1 md:grid-cols-2 gap-8 mb-[90px]">
+        <div class="great-tea-left gap-[30px] grid grid-cols-2 grid-rows-3 ">
+            <div class="bg-linear-to-r from-[#FF0000] to-[#FF8938] opacity-10 rounded-md"></div>
+            <div class="row-span-2 bg-[#e6a5231c] rounded-md">
+                <img src="./images/fresh-1.png" alt="" class="mx-auto">
+            </div>
+            <div class="row-span-2 bg-[#58763921] rounded-md">
+                <img src="./images/fresh-2.png" alt="" class="mx-auto">
+            </div>
+            <div class="bg-linear-to-r from-[#D9D9D9] to-[#FFFFFF] rounded-md"></div>
+        </div>
+        <div class="great-tea-right space-y-4">
+            <h2 class="text-[45px] font-bold">Great Tea, Freshly <br> Presented</h2>
+            <p class="text-[#777777]">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+            <h3 class="font-bold text-[20px]">Unique Taste</h3>
+            <p class="text-[#777777]">A Unique and different style from other teapots gives a <br> luxurious and minimalist impression</p>
+            <h3 class="font-bold text-[20px]">Premium Quality</h3>
+            <p class="text-[#777777]">Premium Quality that makes tea more elegant and more <br> durable when you use it.</p>
+        </div>
+     </section>
+
+
+
+
     
 </body>
 </html>
