--- a/index.html
+++ b/index.html
@@ -141,6 +141,42 @@
     </section>
 
 
+    <!-- News and Event section -->
+     <section class="container mx-auto">
+
+        <div class="space-y-6">
+
+            <h2 class="font-extrabold text-[45px] text-center">News & Events</h2>
+            <p class="text-[#777777] text-center mb-12">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, <br> by injected humour, or randomised words which don't look even slightly believable. </p>
+        </div>
+        <div class="grid grid-cols-1 md:grid-cols-3 pl-24 sm:pl-0 gap-6 mb-[130px]">
+            <div class="p-6 border border-[#777777] rounded-xl space-y-2 max-w-[364px]">
+                <img src="./images/news-1.png" alt="">
+                <p class="text-[#777777]">Feb 05, 2027</p>
+                <h2 class="font-extrabold text-xl">Collecting 8 points for discount</h2>
+                <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
+                <h2 class="font-bold">Learn More</h2>
+            </div>
+            <div class="p-6 border border-[#777777] rounded-xl space-y-2 max-w-[364px]">
+                <img src="./images/news-2.png" alt="">
+                <p class="text-[#777777]">Feb 05, 2027</p>
+                <h2 class="font-extrabold text-xl">Collecting 8 points for discount</h2>
+                <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
+                <h2 class="font-bold">Learn More</h2>
+            </div>
+            <div class="p-6 border border-[#777777] rounded-xl space-y-2 max-w-[364px]">
+                <img src="./images/news-3.png" alt="">
+                <p class="text-[#777777]">Feb 05, 2027</p>
+                <h2 class="font-extrabold text-xl">Collecting 8 points for discount</h2>
+                <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
+                <h2 class="font-bold">Learn More</h2>
+            </div>
+            
+        </div>
+
+     </section>
+
+
     <!-- footer -->
      <footer class="bg-linear-to-r from-[#ff883818] to-[#ff000021] p-12">
 
